fixed map layout on mobile screens

--- a/imports/client/stylesheets/variables.scss
+++ b/imports/client/stylesheets/variables.scss
@@ -20,10 +20,12 @@ $primary-blue-hover: #0062cc;
 $menu-height: 64px;
 $menu-background: $orange;
 $menu-color: $white;
+$menu-height-docus: 59.9px; // this is an approximation... actual height varies depending on device
 
 // Map
 $map-buttons-bg: $orange;
-$map-events-list-width: 350px;
+$map-events-list-width: 375px;
+$minimize-button-height: 30px;
 
 // Admin
 $admin-btn-height: 38px;
